--- a/flask_fr/templates/index.html
+++ b/flask_fr/templates/index.html
@@ -26,6 +26,8 @@
      <br><br>
 <form action="/" method="post">
     <button type="submit" name="text" value="<una;>" class="btn-link">Wyczyść wszyskie</button>
-</form>        
+</form>      
+
+<a href="/komd/" >magia</a>
 
     </body>
