--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,28 @@
 <!doctype html>
+
+
+{% extends "layout_p1.html" %}
+{% block title %}Index{% endblock %}
 <style>
-.btn-link {
-    border: none;
-    outline: none;
-    background: none;
-    cursor: pointer;
-    color: #0000EE;
-    padding: 0;
-    text-decoration: underline;
-    font-family: inherit;
-    font-size: inherit;
-}
-</style>
+    .btn-link {
+        border: none;
+        outline: none;
+        background: none;
+        cursor: pointer;
+        color: #0000EE;
+        padding: 0;
+        text-decoration: underline;
+        font-family: inherit;
+        font-size: inherit;
+    }
+    </style>
 
+{% block content %}
+  <h1>Index</h1>
+  <p class="important">
+    Welcome on my awesome homepage.
 
-<head><title>Test</title> 
-    <meta charset=utf-8> </head>
-    <body>
-        <h1>My Website</h1>
+   
         <form action="/" method="POST">
             <input name="text">i
             <input name="przycisk" type="submit" value="Wyslij polecenie"/><br><br>
@@ -30,4 +35,5 @@
 
 <a href="/komd/" >magia</a>
 
-    </body>
+{% endblock %}
+
