--- a/templates/pol.html
+++ b/templates/pol.html
@@ -1,25 +1,12 @@
 <!doctype html>
 
 
-{% extends "layout_p1.html" %}
-{% block title %}Polecenie wysłane{% endblock %}
-<style>
-    .btn-link {
-        border: none;
-        outline: none;
-        background: none;
-        cursor: pointer;
-        color: #0000EE;
-        padding: 0;
-        text-decoration: underline;
-        font-family: inherit;
-        font-size: inherit;
-    }
-    </style>
-
 {% block content %}
 
-{{polecenie}}
+{% for wpis in db %}
+{{wpis[0]}}: {{wpis[1]}} {{wpis[2]}} {{wpis[3]}}<br>
+
+{% endfor %}
 
 {% endblock %}
 
