serial chat (logger)

--- a/templates/konsola.html
+++ b/templates/konsola.html
@@ -11,8 +11,8 @@
 new Ajax.PeriodicalUpdater('test', '/test',
 {
 method: 'get',
-frequency: 0.2,
-decay: 5
+frequency: 0.3,
+decay: 0
 });
 </script>
 
@@ -24,8 +24,8 @@ decay: 5
     </div>
 
 <form action="/" method="POST">
-    <input name="text" width="600">i
-    <input name="przycisk" type="submit" value="Wyslij polecenie"/><br><br>
+    <input name="text" size="75%">
+    <input name="przycisk" type="submit" value=">>" size="30%"><br><br>
      
 </form>
 
