--- a/templates/lista.html
+++ b/templates/lista.html
@@ -2,20 +2,13 @@
 
 
 {% extends "layout_p1.html" %}
-{% block title %}Polecenie wysłane{% endblock %}
-
+{% block title %}Lista dostępnych poleceń{% endblock %}
 {% block content %}
 
-
-
 {% for wpis in db %}
-<table border=1 width=100%
-><tr><td bgcolor=silver><font color=blue><h2>{{wpis[0]}}.{{wpis[1]}} </h2></font></td></tr>
+<table align="top" bgcolor="silver" border="0" width="100%"><tr><td bgcolor=silver><font color="blue"><h2>{{wpis[0]}}.{{wpis[1]}} </h2></font></td></tr>
 <tr><td><br>{{wpis[2]}}<br></td></tr>
-<tr> <td>Przyklad: <font color=red> {{wpis[3]}}</font></td></tr></table><br>
-
-
+<tr> <td>Przyklad: <font color="red"> {{wpis[3]}}</font></td></tr></table><br>
 {% endfor %}
-
     {% endblock %}
    
