--- a/templates/pol.html
+++ b/templates/pol.html
@@ -2,15 +2,8 @@
 
 
 {% block content %}
-<style>
-
-
-</style>
-
-<table align="top" bgcolor="silver" border="0" width="100%">
-
+<table bgcolor="silver" border="0" width="100%">
     {% for wpis in db %}
-    
     &nbsp;
     {% if wpis[3] == 0 %}<tr><td bgcolor="#EEF2EF"> <a href="tosender/{{wpis[2]}}/1"><img src="{{ url_for('static', filename = 'cmp.png') }}" width="12" height="12"></a> <div id="ui" style="padding:1px; display: inline-block;"> {{wpis[1]}} &nbsp;  {% endif %}
     {% if wpis[3] == 1 %}<tr><td bgcolor="#E1E1E1"> <a href="tosender/{{wpis[2]}}/1"><img src="{{ url_for('static', filename = 'cpu.png') }}" width="12" height="12"></a> <div id="proc" style="padding: 1px; display: inline-block;">{{wpis[1]}} &nbsp; {% endif %}
