--- a/templates/index.html
+++ b/templates/index.html
@@ -2,38 +2,96 @@
 
 
 {% extends "layout_p1.html" %}
-{% block title %}Index{% endblock %}
-<style>
-    .btn-link {
-        border: none;
-        outline: none;
-        background: none;
-        cursor: pointer;
-        color: #0000EE;
-        padding: 0;
-        text-decoration: underline;
-        font-family: inherit;
-        font-size: inherit;
-    }
-    </style>
+{% block title %}Stan stołu{% endblock %}
 
 {% block content %}
-  <h1>Index</h1>
-  <p class="important">
-    Welcome on my awesome homepage.
+<br><br><center>
+<table style="border: 0px;">
+    <tr> <td>
 
-   
-        <form action="/" method="POST">
-            <input name="text">i
-            <input name="przycisk" type="submit" value="Wyslij polecenie"/><br><br>
-             
-        </form>
-     <br><br>
-<form action="/" method="post">
-    <button type="submit" name="text" value="<una;>" class="btn-link">Wyczyść wszyskie</button>
-</form>      
+        <!-- NACZYNIE 1 -->
+        <div class="e" id="Kielich0" style="padding: 25px; text-align: center;   height: 70px; width: 70px;" >
+            {% if naczynia_db[0][3] == 0 %} 
+            <img src="{{ url_for('static', filename = 'shot-glass_empty.png') }}" width="32" height="32">
+            {% endif %}
+            {% if naczynia_db[0][3] == 1 %} 
+            <img src="{{ url_for('static', filename = 'shot-glass_full.png') }}" width="32" height="32">
+            {% endif %}
+            <br><br>{{naczynia_db[0][0]}}</div>
+        
+        </td>
+        
+        
+        
+        <td width="500"></td>
+        
+        <td>
+            
+        <!-- NACZYNIE 5 -->
+            <div class="e" id="Kielich0" style="padding: 25px; text-align: center;  height: 70px; width: 70px;" >
+                {% if naczynia_db[4][3] == 0 %} 
+                <img src="{{ url_for('static', filename = 'shot-glass_empty.png') }}" width="32" height="32">
+                {% endif %}
+                {% if naczynia_db[4][3] == 1 %} 
+                <img src="{{ url_for('static', filename = 'shot-glass_full.png') }}" width="32" height="32">
+                {% endif %}
+                <br><br>{{naczynia_db[4][0]}}</div>
+            
+            </td>
 
-<a href="/komd/" >magia</a>
+
+
+            </tr></table><br>
+
+
+<table style="border: 0px;">
+    <tr> <td>  
+         <!-- NACZYNIE 2 -->
+        <div class="e" id="Kielich0" style="padding: 25px; text-align: center;  height: 70px; width: 70px;" >
+            {% if naczynia_db[1][3] == 0 %} 
+            <img src="{{ url_for('static', filename = 'shot-glass_empty.png') }}" width="32" height="32">
+            {% endif %}
+            {% if naczynia_db[1][3] == 1 %} 
+            <img src="{{ url_for('static', filename = 'shot-glass_full.png') }}" width="32" height="32">
+            {% endif %}
+            <br><br>{{naczynia_db[1][0]}}</div>
+        
+        
+        </td>
+        <td width="175"></td>
+        <td>
+              <!-- NACZYNIE 4 -->
+              <div class="e" id="Kielich0" style="padding: 25px; text-align: center;  height: 70px; width: 70px;" >
+                {% if naczynia_db[3][3] == 0 %} 
+                <img src="{{ url_for('static', filename = 'shot-glass_empty.png') }}" width="32" height="32">
+                {% endif %}
+                {% if naczynia_db[3][3] == 1 %} 
+                <img src="{{ url_for('static', filename = 'shot-glass_full.png') }}" width="32" height="32">
+                {% endif %}
+                <br><br>{{naczynia_db[3][0]}}</div></td></tr>
+</table>
+
+
+
+<br>
+<table style="border: 0px;">
+    <tr> <td>   <!-- NACZYNIE 3 -->
+        <div class="e" id="Kielich0" style="padding: 25px; text-align: center;  height: 70px; width: 70px;" >
+            {% if naczynia_db[2][3] == 0 %} 
+            <img src="{{ url_for('static', filename = 'shot-glass_empty.png') }}" width="32" height="32">
+            {% endif %}
+            {% if naczynia_db[2][3] == 1 %} 
+            <img src="{{ url_for('static', filename = 'shot-glass_full.png') }}" width="32" height="32">
+            {% endif %}
+            <br><br>{{naczynia_db[2][0]}}</div>
+        
+        
+        </td></tr>
+</table>
+
+<br><br>
+</center>
+
 
 {% endblock %}
 
